Fixed the overlapping issue!! Thank goodness!

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
 
-
 .my-nav-center{
   /*width: 100%;*/
   float: right;
@@ -47,14 +46,12 @@ body{
 }
 
 .showcase{
-  height: 700px;
   width: 100%;
   background: rgb(242, 242, 242);
 }
 
 .showcase-pics{
   /*background: rgb(230, 230, 230);*/
-  height: 580px;
   margin-top: 90px;
   border: solid 2px rgb(30, 30, 30);
   border-radius: 10px;
@@ -66,11 +63,12 @@ body{
   background-position: center;
   height: 500px;
   margin-top: 40px;
+  margin-bottom: 40px;
   border-radius: 10px;
 }
 
 .showcase-pic2-quote{
-  height: 570px;
+  /*height: 570px;*/
   /*background: green;*/
 }
 
